--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+}
+
+.Sidebar {
+  height: 100vh;
+  display: flex;
+  flex-grow: 1;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-evenly;
+  border-right: 1px solid black;
+  background-color: lightgray;
 }
 
-.App-link {
-  color: #61dafb;
+.Results {
+  max-width: 66vw;
+  height: auto;
+  display: flex;
+  flex-grow: 2;
+  flex-direction: column;
+  align-items: center;
+  padding: 2em;
+  overflow-y: scroll;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.getButton {
+  height: 10em;
+  width: 10em;
+}
+
+.addButton {
+  height: 10em;
+  width: 10em;
+}
+
+.sortUpButton {
+  height: 10em;
+  width: 10em;
+}
+
+.sortDownButton {
+  height: 10em;
+  width: 10em;
 }
