--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 
 .Sidebar {
   height: 100vh;
+  max-width: 35vw;
   display: flex;
   flex-grow: 1;
   flex-direction: column;
@@ -17,13 +18,14 @@
 }
 
 .Results {
-  max-width: 66vw;
+  max-width: 65vw;
   height: auto;
   display: flex;
   flex-grow: 2;
+  flex-basis: 0;
   flex-direction: column;
   align-items: center;
-  padding: 2em;
+  padding: 3em;
   overflow-y: scroll;
 }
 
