--- a/src/components/PeopleCard/PeopleCard.css
+++ b/src/components/PeopleCard/PeopleCard.css
@@ -1,3 +1,16 @@
 .mainCard {
-    width: 45vw;
+    width: 50vw;
+    display: flex;
+}
+
+.infoArea {
+    display: flex;
+    flex-direction: column;
+    width: 30vw;
+}
+
+.actionArea {
+    display: flex;
+    flex-direction: column;
+    width: 20vw;
 }
